--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <script src="./scripts/dom.js"></script>
     <script src="./scripts/state.js"></script>
     <script src="./scripts/app.js"></script>
+    <script src="./scripts/utils.js"></script>
 </body>
 </html>
