--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+
+    
     <title>Hangman</title>
 </head>
 <body>
     <div>
         <div id="puzzle" class="puzzle"></div>
+        <div id="letters-tried" class="puzzle"></div>
+
         <p id="guesses"></p>
         <button id="reset" class="button">Reset</button>
     </div>
+   
+    <script src="./scripts/utils.js"></script>
     <script src="./scripts/requests.js"></script>
     <script src="./scripts/dom.js"></script>
     <script src="./scripts/state.js"></script>
     <script src="./scripts/app.js"></script>
-    <script src="./scripts/utils.js"></script>
 </body>
 </html>
